@@ -1506,7 +1506,9 @@ name|termVector
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Create a stored field with binary value. Optionally the value may be compressed.    *     * @param name The name of the field    * @param value The binary value    * @param store How<code>value</code> should be stored (compressed or not)    * @throws IllegalArgumentException if store is<code>Store.NO</code>     */
+comment|/**    * Create a stored field with binary value. Optionally the value may be compressed.    *     * @param name The name of the field    * @param value The binary value    * @param store Must be Store.YES    * @throws IllegalArgumentException if store is<code>Store.NO</code>     * @deprecated Use {@link #Field(String, byte[]) instead}    */
+annotation|@
+name|Deprecated
 DECL|method|Field
 specifier|public
 name|Field
@@ -1533,12 +1535,56 @@ argument_list|,
 name|value
 operator|.
 name|length
-argument_list|,
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
 name|store
+operator|==
+name|Store
+operator|.
+name|NO
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"binary values can't be unstored"
+argument_list|)
+throw|;
+block|}
+block|}
+comment|/**    * Create a stored field with binary value. Optionally the value may be compressed.    *     * @param name The name of the field    * @param value The binary value    */
+DECL|method|Field
+specifier|public
+name|Field
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|byte
+index|[]
+name|value
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|name
+argument_list|,
+name|value
+argument_list|,
+literal|0
+argument_list|,
+name|value
+operator|.
+name|length
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Create a stored field with binary value. Optionally the value may be compressed.    *     * @param name The name of the field    * @param value The binary value    * @param offset Starting offset in value where this Field's bytes are    * @param length Number of bytes to use for this Field, starting at offset    * @param store How<code>value</code> should be stored (compressed or not)    * @throws IllegalArgumentException if store is<code>Store.NO</code>     */
+comment|/**    * Create a stored field with binary value. Optionally the value may be compressed.    *     * @param name The name of the field    * @param value The binary value    * @param offset Starting offset in value where this Field's bytes are    * @param length Number of bytes to use for this Field, starting at offset    * @param store How<code>value</code> should be stored (compressed or not)    * @throws IllegalArgumentException if store is<code>Store.NO</code>     * @deprecated Use {@link #Field(String, byte[], int, int) instead}    */
+annotation|@
+name|Deprecated
 DECL|method|Field
 specifier|public
 name|Field
@@ -1558,6 +1604,54 @@ name|length
 parameter_list|,
 name|Store
 name|store
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|name
+argument_list|,
+name|value
+argument_list|,
+name|offset
+argument_list|,
+name|length
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|store
+operator|==
+name|Store
+operator|.
+name|NO
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"binary values can't be unstored"
+argument_list|)
+throw|;
+block|}
+block|}
+comment|/**    * Create a stored field with binary value. Optionally the value may be compressed.    *     * @param name The name of the field    * @param value The binary value    * @param offset Starting offset in value where this Field's bytes are    * @param length Number of bytes to use for this Field, starting at offset    */
+DECL|method|Field
+specifier|public
+name|Field
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|byte
+index|[]
+name|value
+parameter_list|,
+name|int
+name|offset
+parameter_list|,
+name|int
+name|length
 parameter_list|)
 block|{
 if|if
@@ -1602,27 +1696,9 @@ name|fieldsData
 operator|=
 name|value
 expr_stmt|;
-if|if
-condition|(
-name|store
-operator|==
-name|Store
-operator|.
-name|NO
-condition|)
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-literal|"binary values can't be unstored"
-argument_list|)
-throw|;
 name|isStored
 operator|=
-name|store
-operator|.
-name|isStored
-argument_list|()
+literal|true
 expr_stmt|;
 name|isIndexed
 operator|=
